third_party/move/move-compiler-v2/tests/more-v1/parser/struct_native_with_fields.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/struct_native_with_fields.move:3:21
  │
3 │     native struct S { f: u64 }
  │                     ^
  │                     │
  │                     Unexpected '{'
  │                     Expected ';'
